updated forms to better year and cardnum input

--- a/views/index.erb
+++ b/views/index.erb
@@ -26,14 +26,14 @@
         <div class="form-row card-num">
             <label>
               <span>Card Number</span>
-              <input type="tel" pattern="\d*"id="num" placeholder="XXXXXXXXXXXXXXX" maxlength="19" required/>
+              <input type="tel" pattern="\d*"id="num" placeholder="XXXX XXXX XXXX XXXX" maxlength="20" required/>
             </label>
           </div>
 
           <div class="form-row card-exp">
             <label>
               <span>Expiration</span>
-              <input type="tel" pattern="\d{2}\/\d{4}" maxlength="8" id="expiry" placeholder="MM/YYYY" required/>
+              <input type="tel" pattern="\d{2}\/\d{2}" maxlength="8" id="expiry" placeholder="MM/YY" required/>
             </label>
           </div>
 
