added back hidden

--- a/views/index.erb
+++ b/views/index.erb
@@ -18,7 +18,7 @@
 
 
         <div class="card-row">
-        <div id="card-message">
+        <div id="card-message hidden">
           <span id="message-text"></span>
         </div>
         <div class="card">
