--- a/views/index.erb
+++ b/views/index.erb
@@ -26,7 +26,7 @@
         <div class="form-row card-num">
             <label>
               <span>Card Number</span>
-              <input type="tel" pattern="\d*"id="num" placeholder="XXXX XXXX XXXX XXXX" maxlength="20" required/>
+              <input type="tel" pattern="[\d\s]*"id="num" placeholder="1234 5678 9012 3456" maxlength="20" required/>
             </label>
           </div>
 
