--- a/views/index.erb
+++ b/views/index.erb
@@ -37,10 +37,10 @@
             </label>
           </div>
 
-          <div class="form-row card-cvc">
+          <div class="form-row card-cvv">
             <label>
-              <span>CVC</span>
-                <input type="tel" pattern="\d*" maxlength="4" id="cvc" placeholder="XXX" required/>
+              <span>CVV</span>
+                <input type="tel" pattern="\d*" maxlength="4" id="cvv" placeholder="XXX" required/>
             </label>
           </div>
           </div>
