--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,7 +29,6 @@ body{
 }
 
 .hidden{
-  display: none;
   visibility: hidden;
 }
 
@@ -59,8 +58,8 @@ label{
 input{
   background: white;
   margin-top: 4px;
-  box-sizing: border-box;
   -moz-box-sizing: border-box;
+  box-sizing: border-box;
   width: 100%;
   max-width: 100%;
   border-radius: 0;
@@ -69,6 +68,11 @@ input{
   border: 1px solid #cfcfcf;
   box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.1),0 1px 1px rgba(255, 255, 255, 0.15000000000000002);
   height: 38px;
+  font-size: 100%;
+  margin: 0;
+  vertical-align: baseline;
+  font-family: sans-serif;
+  line-height: normal;
 }
 
 .form-row{
@@ -101,9 +105,9 @@ input{
 
 
 .card{
-   border-radius: 4px;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
+   border-radius: 4px;
   height: 209px;
   background: #f5f5f5;
   border: 1px solid #c7c7c7;
@@ -113,8 +117,8 @@ input{
   background: -o-linear-gradient(top, #fafafa, #f5f5f5);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   padding-bottom: 10px;
-  box-sizing: border-box;
   -moz-box-sizing: border-box;
+  box-sizing: border-box;
   width: 90%;
   position: absolute;
   top: 0;
@@ -211,9 +215,9 @@ form:first-child{
 */
 
 #card-message{
-  border-radius: 4px;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
+  border-radius: 4px;
   left: 10px;
   right: 10px;
   padding: 5px;
